--- a/data/sv/system/pentaho-interactive-reporting/resources/web/schedulingdialogs/messages/mantleMessages_sv.properties
+++ b/data/sv/system/pentaho-interactive-reporting/resources/web/schedulingdialogs/messages/mantleMessages_sv.properties
@@ -9,10 +9,10 @@ logout=Logga Ut
 welcome=Välkommen
 refresh=Ladda om
 refreshTooltip=Återladda
-toggleSolutionBrowser=Visa/göm filträd
-solutionBrowser=Filträd
+toggleSolutionBrowser=Visa/göm arkiv
+solutionBrowser=Arkiv
 showBrowser=Visa webbläsare
-solutionBrowserRefreshed=Filträdet återladdat 
+solutionBrowserRefreshed=Arkiv återladdat 
 showWorkspace=Visa arbetsyta
 workspace=Arbetsyta
 myDesktop=Min arbetsyta
@@ -24,7 +24,7 @@ licenseInfo=licenseInfo=<BR>Copyright (c) 2008-{0} Pentaho Corporation. All righ
 select=Välj
 selectFolder=Välj mapp
 softwareUpdates=Uppdatering...
-showSolutionBrowser=Filträd
+showSolutionBrowser=Arkiv
 showActualFileNames=Visa aktuella filnamn
 showLocalizedFileNames=Visa lokala filnamn
 useDescriptionsForTooltips=Använd beskrivningar för verktygstips
@@ -412,13 +412,13 @@ editSchedule=Ändra schema
 editBlockoutSchedule=Ändra blockerat schema
 deleteBlockoutWarning=Är du säker på att du vil ta bort blockerat schema {0} ?
 executeNow=Kör nu
-filterSchedules=Filtera scheman
+filterSchedules=Filtrera scheman
 removeFilters=Ta bort filter
 scheduledResource=Schemalagda resurser
 executionTime=Exekverings tid:
 _user=Användare
-scheduleState=Schema status
-scheduleType=Schema typ
+scheduleState=Schemastatus
+scheduleType=Schematyp
 before=Före
 after=Efter
 from=från
@@ -436,7 +436,7 @@ scheduleDeletionOfGeneratedFiles=Schemalägg borttagning av genererade filer.
 generatedFilesAreNotScheduledToBeDeleted=Genererade filer har inte schemalagts för borttagning.
 cancelSchedule=Stoppa ett schema
 scheduleDeletion=Borttagning av schema
-daysUsingTheFollowingRules=Dagar för att följa följanade regler:
+daysUsingTheFollowingRules=Dagar för att följa följande regler:
 available=Tillgängliga
 users=Användare
 roles=Roller
